added some print statements to debug

--- a/HW 6 Can't see the forest for the trees/Makefile
+++ b/HW 6 Can't see the forest for the trees/Makefile
@@ -8,4 +8,5 @@ andshake:
 	clear
 	g++ -g -Wall -Wextra -pedantic -Werror treeTest.cc htree.cc -o treeTester.exe
 	echo fart
-
+forest:
+	g++ -g -Wall -Wextra -pedantic -Werror hforest.cc forestTest.cc htree.cc -o forestTester.exe
