--- a/HW 6 Can't see the forest for the trees/Makefile
+++ b/HW 6 Can't see the forest for the trees/Makefile
@@ -10,3 +10,5 @@ andshake:
 	echo fart
 forest:
 	g++ -g -Wall -Wextra -pedantic -Werror hforest.cc forestTest.cc htree.cc -o forestTester.exe
+clean:
+	rm *.o *.exe
